# CurlDownloadManager

./: CMakeLists.txt  README.md  gen_vs_proj.bat
lib/: jsoncpp.lib  libcurl.lib
src/: CMakeLists.txt  CurlDownManager.cpp  CurlDownManager.h  DownLoadTask.cpp  DownLoadTask.h  FunHelper.h  MD5.cpp  MD5.h  Singleton.cpp  Singleton.h  UtilSharedMemory.cpp  UtilSharedMemory.hpp  UtilSharedMemory_0.cpp  UtilSharedMemory_0.hpp  commonData.h  main.cpp
